<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include layout="@layout/ui_navibar"/>

    <ScrollView
        android:id="@+id/root_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btn_navibar"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:background="@color/whiteTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/common_horizontal_padding"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    >

                    <TextView
                        android:id="@+id/tv_title_receiver"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="19.6dp"
                        android:text="@string/eth_title_receiver"
                        android:textColor="@color/black_context"
                        android:textSize="@dimen/font_3.5"
                        />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:id="@+id/view_receiver_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_title_receiver"
                        android:layout_marginTop="14dp">

                        <EditText
                            android:id="@+id/et_receiver_account"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/eth_account_name_hint"
                            android:singleLine="true"
                            android:textColor="@color/black_content"
                            android:textColorHint="@color/grey_content"
                            android:textCursorDrawable="@drawable/cursor_custom"
                            android:textSize="@dimen/font_4"/>

                        <ImageView
                            android:id="@+id/iv_transfer_account_clear"
                            style="@style/clear_icon_common"/>

                    </LinearLayout>

                </RelativeLayout>

                <View
                    style="@style/common_divider"/>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    >

                    <TextView
                        android:id="@+id/tv_title_pay_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="19.6dp"
                        android:text="@string/eth_title_payer_account"
                        android:textColor="@color/black_context"
                        android:textSize="@dimen/font_3.5"
                        />

                    <RelativeLayout
                        android:id="@+id/view_change_account"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/tv_title_pay_account"
                        android:layout_marginTop="14dp">

                        <ImageView
                            android:id="@+id/imv_wookong_logo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_marginLeft="16dp"
                            android:src="@drawable/wookong_logo"
                            android:visibility="gone"/>


                        <TextView
                            android:id="@+id/tv_pay_account"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/imv_wookong_logo"
                            android:singleLine="true"
                            android:textColor="@color/black_content"
                            android:textSize="@dimen/font_4"
                            android:textStyle="bold"
                            android:ellipsize="middle"
                            tools:text="0xASDF4HJK34HKJH43JKH43fsdfsdfsdfsdHIK3XSDFDASJL"
                            />



                    </RelativeLayout>

                </RelativeLayout>

                <View
                    style="@style/common_divider"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    >

                    <TextView
                        android:id="@+id/tv_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eth_title_fund"
                        android:layout_marginTop="19.6dp"
                        android:textColor="@color/black_context"
                        android:textSize="@dimen/font_3.5"
                        />

                    <TextView
                        android:id="@+id/tv_banlance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="19.6dp"
                        android:singleLine="true"
                        android:text="@string/eth_remain_balance_zero"
                        android:textColor="@color/black_context"
                        android:textSize="@dimen/font_3.5"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_amount"
                        android:layout_marginTop="14dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_amount"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/eth_tip_transfer"
                            android:inputType="numberDecimal"
                            android:singleLine="true"
                            android:textColor="@color/black_content"
                            android:textColorHint="@color/grey_content"
                            android:textCursorDrawable="@drawable/cursor_custom"
                            android:textSize="@dimen/font_4"/>

                        <ImageView
                            android:id="@+id/iv_transfer_amount_clear"
                            style="@style/clear_icon_common"/>

                    </LinearLayout>


                </RelativeLayout>

                <View
                    style="@style/common_divider"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    >

                    <TextView
                        android:id="@+id/tv_note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eth_transfer_tip"
                        android:layout_marginTop="19.6dp"
                        android:textColor="@color/black_context"
                        android:textSize="@dimen/font_3.5"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_note"
                        android:orientation="horizontal">


                        <com.cybex.componentservice.widget.EditTextWithScrollView
                            android:id="@+id/et_note"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/eth_input_transfer_hint"
                            android:maxLines="3"
                            android:minHeight="50dp"
                            android:textColor="@color/black_content"
                            android:textColorHint="@color/grey_content"
                            android:textCursorDrawable="@drawable/cursor_custom"
                            android:textSize="@dimen/font_4"/>

                        <ImageView
                            android:id="@+id/iv_transfer_note_clear"
                            style="@style/clear_icon_common"/>

                    </LinearLayout>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    style="@style/common_divider"
                   />
                
                <com.cybex.base.view.LabelLayout
                    android:id="@+id/label_mine"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    app:text_left="矿工费"
                    app:text_right="0.002 ETH"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_transfer_nextStep"
                android:layout_width="match_parent"
                android:layout_marginTop="38dp"
                android:layout_marginLeft="@dimen/common_view_margin"
                android:layout_marginRight="@dimen/common_view_margin"
                style="@style/common_button"
                android:enabled="false"
                android:text="@string/next_step"
                android:textColor="@color/white"
                android:textSize="@dimen/font_4"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>